# blind-guide

./: .gitignore  README.md  requirements.txt
Backend/: pyproject.toml  request.json
Backend/api/: db.sqlite3
Backend/api/YOLOv8/: YOLOv8.py  funcToBoxes.py  main.ipynb
Backend/api/api/: settings.py  urls.py
Backend/api/objectdetection/: urls.py  views.py
Flutter/: pubspec.yaml
Flutter/macos/Runner.xcodeproj/: project.pbxproj
Flutter/test/: widget_test.dart
YOLOv8/: BlindGuideipynb.ipynb  Graduation_project.py  YOLOv8.py  func.py  funcToBoxes.py  main.ipynb  yolov8.ipynb
YOLOv8/.ipynb_checkpoints/: yolov8-checkpoint.ipynb
YOLOv8/with gpu/: FuncToBoxes.py  YOLOv8.py
api/: FuncToBoxes.py  YOLOv8.py  app.py  blind-guide-FastAPI-ws.ipynb  blind-guide.ipynb  requirements.txt  test.txt  testing_request.json
api/api/: settings.py  urls.py
api/django/api/: urls.py
api/django/objectdetection/: apps.py
api/fastapi/: blind-guide-FastAPI.ipynb
api/objectdetection/: YOLOv8.py  funcToBoxes.py  urls.py  views.py
models/: currency_detector.ipynb  object_detection_api.ipynb
object_detection/android/app/: build.gradle
object_detection/android/app/src/main/res/drawable/: launch_background.xml
object_detection/web/: index.html
object_detection_api/: Dockerfile  requirements.txt
object_detection_api/app/: main.py
yolov8/: BlindGuideipynb.ipynb  YOLOv8.py  funcToBoxes.py
yolov8/with gpu/: Blind_Guide.ipynb  YOLOv8.py
